compiler/testData/diagnostics/tests/RecursiveTypeInference.jet
package a {
    val foo = bar()

    fun bar() = <!TYPECHECKER_HAS_RUN_INTO_RECURSIVE_PROBLEM!>foo<!>
}

package b {
    fun foo() = bar()

    fun bar() = <!TYPECHECKER_HAS_RUN_INTO_RECURSIVE_PROBLEM!>foo()<!>
}

package c {
    fun bazz() = bar()

    fun foo() = <!TYPECHECKER_HAS_RUN_INTO_RECURSIVE_PROBLEM!>bazz()<!>

    fun bar() = foo()
}

package ok {

    package a {
        val foo = bar()

        fun bar() : Int = foo
    }

    package b {
        fun foo() : Int = bar()

        fun bar() = foo()
    }

    package c {
        fun bazz() = bar()

        fun foo() : Int = bazz()

        fun bar() = foo()
    }
}